# telepathy-qt

./: CMakeLists.txt
TelepathyQt/: CMakeLists.txt  TelepathyQt-uninstalled.pc.in  TelepathyQt.pc.in  TelepathyQtConfig.cmake.in  TelepathyQtService-uninstalled.pc.in  TelepathyQtService.pc.in  TelepathyQtServiceConfig.cmake.in  file-transfer-channel-creation-properties.cpp
TelepathyQt/Farstream/: CMakeLists.txt  TelepathyQtFarstream-uninstalled.pc.in  TelepathyQtFarstream.pc.in
cmake/modules/: TelepathyDefaults.cmake  TpQtMacros.cmake
examples/accounts/: CMakeLists.txt
examples/cm/: CMakeLists.txt
examples/contact-messenger/: CMakeLists.txt
examples/extensions/: CMakeLists.txt
examples/file-transfer/: CMakeLists.txt
examples/protocols/: CMakeLists.txt
examples/roster/: CMakeLists.txt
examples/stream-tubes/: CMakeLists.txt
tests/dbus/: account-channel-dispatcher.cpp  client.cpp
tests/lib/: CMakeLists.txt
tests/lib/glib-helpers/: test-conn-helper.cpp
